--- a/templates/failure.gohtml
+++ b/templates/failure.gohtml
@@ -5,7 +5,7 @@
     <title>INDEX</title>
 </head>
 <body>
-  <h3> Nice try Trool </h3>
+  <h3> Nice try Troll </h3>
   <p> {{.}} </p>
   <a href="/">Try again</a>
 </body>
