cleaned up views, so they are DRY

--- a/templates/success.gohtml
+++ b/templates/success.gohtml
@@ -1,12 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>INDEX</title>
-</head>
-<body>
+{{template "header" }}
   <h3> Looks great! Thanks for validating you're not a troll </h3>
   <p> {{.}} </p>
   <a href="/">Try again</a>
-</body>
-</html>
+{{template "footer"}}
