--- a/templates/failure.gohtml
+++ b/templates/failure.gohtml
@@ -1,12 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>INDEX</title>
-</head>
-<body>
+{{template "header"}}
   <h3> Nice try Troll </h3>
   <p> {{.}} </p>
   <a href="/">Try again</a>
-</body>
-</html>
+{{template "header" }}
