--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,10 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>INDEX2</title>
-</head>
-<body>
+{{template "header" }}
 
 <p> <span style="font-weight: bold;">Please count the frequency of the words in: </span>"{{.Text}}" </p>
 {{if .Exclusions }}
@@ -22,5 +16,4 @@
     <input type="submit">
 </form>
 
-</body>
-</html>
+{{template "footer" }}
